  History of user-visible changes.
  26 February 2023

See the end of this file for copyrights and conditions.

All user-visible changes are more fully described in the GNU Make manual,
which is contained in this distribution as the file doc/make.texi.
See the README file and the GNU Make manual for instructions for
reporting bugs.


Version 4.5 (26 Feb 2023)

A complete list of bugs fixed in this version is available here:

https://sv.gnu.org/bugs/index.php?group=make&report_id=111&fix_release_id=111&set=custom

* WARNING: Removed AmigaOS support!
  This version of GNU Make no longer supports AmigaOS.  If you need support
  for AmigaOS please use one of the older versions of GNU Make.

* WARNING: Loaded Object ABI incompatibility!
  This release changes the loaded object feature from "technology preview" to
  fully-supported feature.  However, it introduces an ABI incompatibility with
  previous releases: the setup function now takes an ABI version as its first
  argument.  When compiling your loaded object you can test the GMK_ABI_VERSION 
  constant at compile time to detect which ABI should be used.  At runtime
  your initialization function can check the provided ABI version to verify
  it's being loaded correctly.

* New feature: Unload function for loaded objects
  When a loaded object needs to be unloaded by GNU Make, it will invoke an
  unload function (if one is defined) beforehand that allows the object to
  perform cleanup operations.
  Original idea and implementation: Dmitry Goncharov <dgoncharov@users.sf.net>

* New feature: Makefile warning reporting control
  A new option "--warn" controls reporting of warnings for makefiles.  Actions
  can be set to "ignore", "warn", or "error".  Two new warnings are reported:
  assigning to invalid variable names, and referencing invalid variable names
  (both set to "warn" by default), in addition to the existing warning for
  undefined variables (defaults to "ignore"). "--warn-undefined-variables" is